# pixie

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  REPORT.md
.github/workflows/: benchmarks-test.yml  build-test.yml  coverage.yml  doxygen.yml  kilo-dispatch.yml  linter.yml
.kilo/command/: benchmarks-affected.md  perf-review.md
.kilo/skills/benchmarks/: EXAMPLES.md  SKILL.md
.kilo/skills/benchmarks-affected/: EXAMPLES.md  SKILL.md  analyze_benchmarks_affected.py
.kilo/skills/benchmarks-compare-revisions/: SKILL.md
.kilo/skills/cmake/: EXAMPLES.md  SKILL.md
.kilo/skills/paper-search/: SKILL.md
.kilo/skills/paper-search/references/: api_reference.md
.kilo/skills/paper-search/scripts/: search_papers.py
.kilo/skills/setup-cpp-repo/: EXAMPLES.md  SKILL.md
.kilo/skills/setup-cpp-repo/references/: project_structure.md
.kilo/skills/setup-cpp-repo/scripts/: init_cpp_project.py
.opencode/skills/benchmarks-compare-revisions/: SKILL.md
.opencode/skills/cmake/: SKILL.md
academic/: .gitignore  AGENTS.md  _quarto.yml  index.qmd
academic/bibliography/: references.bib
academic/notes/: index.qmd
academic/notes/rmq/: index.qmd
academic/papers/: index.qmd
academic/papers/algorithms_for_excess/: paper.qmd  references.bib
academic/papers/sample-paper/: .gitignore  paper.qmd
academic/papers/test-ieee-paper/: paper.qmd  references.bib
academic/presentations/: index.qmd
academic/reports/: index.qmd
academic/scripts/: init.sh
agentic/cpp/: README.md
agentic/cpp/commands/: README.md
agentic/cpp/skills/benchmarks-affected/: SKILL.md  analyze_benchmarks_affected.py
agentic/cpp/skills/benchmarks-compare-revisions/: SKILL.md
agentic/cpp/skills/benchmarks/scripts/: plot_benchmarks.py
agentic/cpp/skills/cmake/: SKILL.md
agentic/cpp/skills/diagnose-segfault/: SKILL.md
agentic/cpp/skills/optimization-experiment/: SKILL.md
agentic/cpp/skills/setup-cpp-repo/: SKILL.md
agentic/cpp/skills/setup-cpp-repo/references/: project_structure.md
agentic/cpp/skills/setup-cpp-repo/scripts/: init_cpp_project.py
agentic/local/cpp/skills/benchmarks/: EXAMPLES.md
agentic/local/cpp/skills/capture-learnings/: EXAMPLES.md
agentic/local/cpp/skills/cmake/: EXAMPLES.md
agentic/local/cpp/skills/estimate-token-usage/: EXAMPLES.md
agentic/local/cpp/skills/optimization-experiment/: EXAMPLES.md
commands/: ping.md
include/: bits.h  bitvector.h  louds_tree.h  rmm_tree.h  utils.h
include/misc/: naive_rmm_tree.h
include/pixie/: bit_stream.h  bits.h  bitvector.h  bp_tree.h  cache_line.h  dfuds_tree.h  huffman.h  louds_tree.h  memory_usage.h  mmap_storage.h  rank_select.h  rmm.h  rmm_base.h  rmm_tree.h  rmm_tree_sdsl.h  rmq.h  storage.h  tree.h  utils.h  wavelet_tree.h
include/pixie/experimental/: excess.h  rmm_btree.h  select.h
include/pixie/huffman/: implementations.h  pivco_huffman.h
include/pixie/io/: mapped_file.h
include/pixie/rank_select/: implementations.h  support.h
include/pixie/rmm/: btree.h  implementations.h  sdsl.h  tree.h
include/pixie/rmq/: bp_plus_minus_one_rmq.h  cartesian_hybrid_btree.h  cartesian_rmm.h  cartesian_tree_rmq.h  hybrid_btree.h  implementations.h  node_euler_btree_rmq.h  rmq_base.h  rmq_one_interval_btree.h  sdsl_sct.h  sdsl_sct_rmq.h  segment_btree_xl.h  segment_tree.h  sparse_table.h
include/pixie/rmq/experimental/: cartesian_tree_rmm_btree_rmq.h  cartesian_tree_segment_btree_xl_rmq.h  node_euler_btree_rmq.h
include/pixie/rmq/utils/: succinct_monotone_stack.h
include/pixie/storage/: aligned.h  implementations.h  read_only_view.h
include/pixie/tree/: bp.h  dfuds.h  implementations.h  louds.h
include/pixie/wavelet_tree/: implementations.h  index.h
include/reference_implementations/: naive_rmm_tree.h
misc/: plot_rmm.py
misc/include/: naive_rmm_tree.h
report/: report.md
report/data/: dfs.txt  rank_select_bm.txt
scripts/: coverage_report.sh  draw_bp_representation.py  draw_bp_tree.py  excess_benchmark_table.py  kilo-postprocess.ts  parse_benchmarks.py  plot_rmm.py  plot_rmq_hybrid_random_queries.py  plot_size_benchmarks.py  run_cache_miss_profiler.sh
skills/benchmarks/: SKILL.md
skills/paper-search/: SKILL.md
src/: alignment_comparison.cpp  bench_rmm.cpp  bench_rmm_sdsl.cpp  benchmark_tests.cpp  benchmarks.cpp  benchmarkstests.cpp  fuzzer.cpp  louds_tree_benchmarks.cpp  louds_tree_tests.cpp  test_rmm.cpp  unittests.cpp
src/benchmarks/: alignment_comparison.cpp  bench_rmm.cpp  bench_rmm_btree.cpp  bench_rmm_sdsl.cpp  bench_rmq.cpp  benchmarks.cpp  bp_tree_benchmarks.cpp  dfuds_tree_benchmarks.cpp  excess_positions_benchmarks.cpp  louds_tree_benchmarks.cpp  pivco_huffman_benchmarks.cpp  rank_select_benchmarks.cpp  rmm_benchmark_base.h  rmm_benchmarks.cpp  rmm_btree_benchmarks.cpp  rmm_sdsl_benchmarks.cpp  rmq_benchmarks.cpp  select512_benchmarks.cpp  wavelet_tree_benchmarks.cpp
src/docs/: Doxyfile.in  benchmark_results.md  bibliography.bib  excess_positions_benchmark_results.md
src/tests/: benchmark_tests.cpp  bits_unittests.cc  bp_tree_tests.cpp  dfuds_tree_tests.cpp  excess_positions_tests.cpp  excess_record_lows_tests.cpp  louds_tree_tests.cpp  pivco_huffman_tests.cpp  rank_select_tests.cpp  rank_select_unittests.cc  rmq_tests.cpp  select512_experimental_tests.cpp  storage_tests.cpp  test_rmm.cpp  tree_tests.cpp  unittests.cpp  wavelet_tree_tests.cpp
